# FaceForge

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: stage1-design.md  stage1-plan.md  stage2-design.md  stage2-plan.md  technical-design.md
scripts/: export_pixel3dmm_baseline.py  run_preprocessing_cortis.py  run_stage1.py  run_stage2.py
src/faceforge/: _config_loader.py  _paths.py
src/faceforge/preprocessing/: __init__.py  base.py
src/faceforge/preprocessing/cropping/: __init__.py  _geometry.py  base.py  ffhq.py  visualize.py
src/faceforge/preprocessing/flame_tracking/: __init__.py  base.py  metrical_tracker.py  visualize.py
src/faceforge/preprocessing/landmark/: __init__.py  base.py  insightface_106.py  pipnet_98.py  visualize.py
src/faceforge/preprocessing/matting/: __init__.py  base.py  modnet.py  visualize.py
src/faceforge/preprocessing/segmentation/: __init__.py  base.py  bisenet.py  facer_celebm.py  visualize.py
src/faceforge/stage1/: __init__.py  aggregation.py  alignment.py  config.py  data_types.py  deca_inference.py  detection.py  merge.py  mica_inference.py  mp2dlib.py  paths.py  pipeline.py  pipnet_inference.py  realy_eval.py  segmentation.py  visualization.py
src/faceforge/stage2/: __init__.py  _pixel3dmm_paths.py  camera.py  config.py  data_types.py  flame_model.py  flame_wrapper.py  optimizer.py  pipeline.py  pixel3dmm_inference.py  renderer.py  visualization.py
src/faceforge/stage2/losses/: contour.py  identity.py  landmark.py  mirror.py  normal.py  photometric.py  pixel3dmm_uv.py  prdl.py  region_weight.py  regularization.py  silhouette.py  total.py
src/faceforge/stageP3M/: __init__.py  _data_bridge.py  config.py  pipeline.py  visualization.py
tests/: test_preprocessing_components.py
tests/stage1/: conftest.py  test_integration.py  test_optional_pytorch3d.py  test_pipeline_contract.py  test_pipnet_inference.py  test_unit.py
tests/stage2/: test_preprocess_parsing.py
tests/stageP3M/: test_bridge.py
